# forsys_test

./: .gitignore  CMakeLists.txt  README.md  a.out  client  client.cpp  common.hpp  identifier.sqlite  server  server.cpp  task3.sql
